--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
+
+<div class="container">
+    <div class="row">
+        <div style="position:fixed;z-index:1000">
+            <app-header></app-header>
+        </div>
+    </div>        
+</div>
+
+<div class="hidden-xs" style="position:absolute;z-index:10;">
+    <app-carousel></app-carousel>
+</div>
+
 <div class="router-outlet">
   <router-outlet></router-outlet>
 </div>
