--- a/src/app/deposit-calculator/deposit-calculator.component.html
+++ b/src/app/deposit-calculator/deposit-calculator.component.html
@@ -1,16 +1,33 @@
+
 <div class="container">
     <div class="row">
-        <div style="position:fixed;z-index:1000">
-            <app-header></app-header>
-        </div>
+        <div style="margin-top:530px">
 
-
-        <div>
-            <div class="hidden-xs">
-                    <app-carousel></app-carousel>                    
-            </div>
-            <div style="margin-top:20px">
+            <div style="padding-bottom:100px">
                 <app-calculation-panel></app-calculation-panel>
+            </div>
+
+            <div>
+                <div style="margin-top:100px"></div>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
+                <p>sdaddasadadsad</p>
             </div>
         </div>
     </div>
