--- a/src/app/calculation-panel/calculation-panel.component.css
+++ b/src/app/calculation-panel/calculation-panel.component.css
@@ -15,15 +15,48 @@
 .menu-name {
           font-size: 18px;
           color: rgb(141, 141, 141);
+          margin-bottom: 10px;
 }
 
-mat-slider {
+.mat-slider {
           width: 100%;
-          color: rgb(69, 175, 189);
+          /* color: rgb(69, 175, 189); */
 }
 
 .mat-checkbox {
           /* background-color: rgb(69, 175, 189); */
-          border: 1px solid;
+          /* border: 2px solid; */
+          /* border-color: rgb(221, 221, 221); */
+          background-color: rgba(128, 128, 128, 0.15);
+          
+}
 
+.header-button {
+          margin-top: 30px;
+}
+
+.mat-raised-button {
+          background-color: rgb(69, 175, 189);
+          color:white;
+          box-shadow: 0;
+          border-radius: 50px;
+          height:50px;
+          width: 130px;
+          box-shadow: none !important;
+}
+
+.prime-content {
+          font-size: 40px;
+          color: rgb(69, 175, 189);
+}
+
+.mat-button-toggle-checked {
+          box-shadow: none !important;
+          background-color: rgb(233, 233, 233);
+          color: white;
+          
+}
+
+.mat-button-toggle-group {
+          box-shadow: none !important;          
 }
