--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
     <div class="row">
-        <div style="position:fixed;z-index:1000">
+        <div id="zenit_header" style="position:fixed;z-index:1000">
             <app-header></app-header>
         </div>
     </div>        
