--- a/src/app/calculation-panel/calculation-panel.component.css
+++ b/src/app/calculation-panel/calculation-panel.component.css
@@ -2,7 +2,7 @@
           /* font-size: 30pt; */
           margin: 0;
           padding: 0;
-          min-width: 40px;
+          width: 100%;
           line-height: 40px;
 }
 
