--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
       <button mat-button>ЧАСТНЫМ ЛИЦАМ</button>
       <button mat-button>БИЗНЕСУ</button>
 
-      <button mat-button>О БАНКЕ</button>
+      <button style="color:black" mat-button>О БАНКЕ</button>
 
       <span>
         <button style="color:black" mat-button>БАНКОМАТЫ И ОФИСЫ</button>
