--- a/src/app/deposit-calculator/deposit-calculator.component.html
+++ b/src/app/deposit-calculator/deposit-calculator.component.html
@@ -1,13 +1,12 @@
-
 <div class="container">
     <div class="row">
         <div>
 
-            <div style="padding-bottom:10px">
+            <div>
                 <app-calculation-panel></app-calculation-panel>
             </div>
 
-            <div id="zenit_depo_calc_main_content">
+            <div id="zenit_depo_calc_main_content" style="padding-top:10px">
                 <p>1sdaddasadadaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaasad</p>
                 <p>2sdaddasadadaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaasad</p>
                 <p>3sdaddasadadaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaasad</p>
