--- a/src/app/deposit-calculator/calculation-panel/calculation-panel.component.html
+++ b/src/app/deposit-calculator/calculation-panel/calculation-panel.component.html
@@ -1,6 +1,6 @@
-<div id="zenit_calculation_panel" style="background-color: white;">
-  <div class="container">
-    <div class="row">
+<div class="container">
+  <div class="row">
+    <div style="background-color: white;">
       <div class="col-xs-2">
         <button mat-button style="border-right:1px solid; border-color:rgba(0, 0, 0, 0.1);">
           <md-icon>
