--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,20 @@
+<div id="zenit_header_background_80px" style="position:fixed;z-index:999;height:80px;width:100%!important;background-color:white"></div>
 
-<div class="container">
-    <div class="row">
-        <div id="zenit_header" style="position:fixed;z-index:1000">
-            <app-header></app-header>
-        </div>
-    </div>        
+<div id="zenit_header_80px" style="position:fixed;z-index:1000;width:100%!important">
+    <app-header></app-header>
 </div>
 
 <div class="hidden-xs" style="position:absolute;z-index:10;">
     <app-carousel></app-carousel>
 </div>
 
-<div class="router-outlet">
-  <router-outlet></router-outlet>
+<div class="container">
+    <!-- 80 px - only 'header' -->
+    <!-- 500px  'carousel' with 'header' ('header' over) -->
+    <!-- 10 px - space between 'carousel' and 'menu_panel' -->
+    <!-- 160px - 'menu_panel' -->
+    <!-- 10px - space between 'menu_panel' and 'zenit_content_below_menu_panel' -->
+    <div class="row" style="margin-top:510px">
+        <router-outlet></router-outlet>
+    </div>
 </div>
