--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,7 +1,7 @@
 <carousel [interval]="interval" style="width:1920px">
   <slide>
     <div class="img-wrap">
-      <img src="https://wallpaperscraft.com/image/skyscraper_building_fog_114534_2560x1080.jpg" width="100%" height="500px;" alt="Second slide">
+      <img src="assets/images/unn_skyscraper.jpg" width="100%" height="500px;" alt="First slide">
       <div id="first-slide-content">
         <div class="business-title">
           <p>
@@ -32,11 +32,11 @@
     </div>
   </slide>
   <slide>
-    <img src="https://wallpaperscraft.com/image/skyscraper_building_architecture_112550_2560x1080.jpg" width="100%" height="500px"
-      alt="First slide">
+    <img src="assets/images/unn_skyscraper_2.jpg" width="100%" height="500px"
+      alt="Second slide">
   </slide>
   <slide>
-    <img src="http://www.wallpapersbyte.com/wp-content/uploads/2016/01/Empire-State-Building-Skyscraper-New-York-City-WallpapersByte-com-2560x1080.jpg"
+    <img src="assets/images/vesna_sneg_trava.jpg"
       width="100%" height="500px" alt="Third slide">
   </slide>
 </carousel>
