--- a/src/app/deposit-calculator/calculation-panel/calculation-panel.component.css
+++ b/src/app/deposit-calculator/calculation-panel/calculation-panel.component.css
@@ -23,10 +23,6 @@
           /* color: rgb(69, 175, 189); */
 }
 
-.header-button {
-          margin-top: 30px;
-}
-
 .mat-raised-button {
           background-color: rgb(69, 175, 189);
           color:white;
@@ -34,23 +30,18 @@
           border-radius: 50px;
           height:50px;
           width: 130px;
-          box-shadow: none !important;
-}
-
-.prime-content {
-          font-size: 40px;
-          color: rgb(69, 175, 189);
+          box-shadow: none;
 }
 
 .mat-button-toggle-checked {
-          box-shadow: none !important;
+          box-shadow: none;
           background-color: rgb(233, 233, 233);
           color: white;
           
 }
 
 .mat-button-toggle-group {
-          box-shadow: none !important;          
+          box-shadow: none;          
 }
 
 input {
